--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,11 @@
             android:id="@+id/background"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
+            android:background="@color/design_default_color_primary_dark"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/design_default_color_primary_dark"/>
+            app:layout_constraintTop_toTopOf="parent">
 
+        </View>
 
         <ImageView
             android:id="@+id/photo"
@@ -45,7 +46,6 @@
             android:layout_marginTop="8dp"
             android:text="Name"
             app:layout_constraintBottom_toTopOf="@+id/position"
-
             app:layout_constraintStart_toEndOf="@+id/photo"
             app:layout_constraintTop_toBottomOf="@+id/background" />
 
@@ -64,10 +64,10 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_marginTop="40dp"
-            android:textStyle="bold"
-            android:text="Biography"
-           android:background="@color/cardview_shadow_start_color"
+            android:background="@color/cardview_shadow_start_color"
             android:gravity="center"
+            android:text="Biography"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/photo" />
