--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,14 @@
     app:cardCornerRadius="4dp"
     app:cardElevation="8dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="736dp"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
-        android:padding="8dp">
+        android:padding="8dp"
+        app:layoutDescription="@xml/activity_main_xml_linearlayout_scene">
 
         <View
             android:id="@+id/background"
@@ -43,7 +44,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="8dp"
+
             android:text="Name"
             app:layout_constraintBottom_toTopOf="@+id/position"
             app:layout_constraintStart_toEndOf="@+id/photo"
@@ -94,5 +95,5 @@
             app:layout_constraintTop_toBottomOf="@+id/biography" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 </androidx.cardview.widget.CardView>
