--- a/app/src/main/res/xml/activity_main_xml_linearlayout_scene.xml
+++ b/app/src/main/res/xml/activity_main_xml_linearlayout_scene.xml
@@ -10,10 +10,32 @@
         motion:duration="1000">
        <KeyFrameSet>
            <KeyAttribute
-               android:scaleX="2.0"
+               android:scaleX="1.0"
                android:scaleY="2.0"
                motion:framePosition="30"
                motion:motionTarget="@id/photo" />
+           <KeyPosition
+               motion:framePosition="50"
+               motion:motionTarget="@id/name"
+               motion:keyPositionType="parentRelative"
+               motion:percentY="-0.8"/>
+           <KeyPosition
+               motion:framePosition="50"
+               motion:motionTarget="@id/position"
+               motion:keyPositionType="parentRelative"
+               motion:percentY="-0.8"/>
+
+           <KeyPosition
+               motion:framePosition="50"
+               motion:motionTarget="@id/email"
+               motion:keyPositionType="parentRelative"
+               motion:percentY="0.9"/>
+           <KeyPosition
+               motion:framePosition="50"
+               motion:motionTarget="@id/phone"
+               motion:keyPositionType="parentRelative"
+               motion:percentY="0.9"/>
+
        </KeyFrameSet>
     </Transition>
 
@@ -21,9 +43,13 @@
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
-        <Constraint
-            android:id="@+id/name"
-            android:layout_marginTop="8dp"
-       />
+<!--        <Constraint-->
+<!--            android:id="@+id/name"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            motion:layout_constraintBottom_toTopOf="@+id/position"-->
+<!--            android:layout_width="100dp"-->
+<!--            motion:layout_constraintTop_toBottomOf="@+id/background"-->
+<!--            motion:layout_constraintStart_toEndOf="@+id/photo"-->
+<!--            android:layout_marginLeft="40dp" />-->
     </ConstraintSet>
 </MotionScene>
