--- a/app/src/main/res/xml/activity_main_xml_linearlayout_scene.xml
+++ b/app/src/main/res/xml/activity_main_xml_linearlayout_scene.xml
@@ -1,55 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
+        motion:autoTransition="animateToEnd"
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:autoTransition="animateToEnd"
-        motion:duration="1000">
-       <KeyFrameSet>
-           <KeyAttribute
-               android:scaleX="1.0"
-               android:scaleY="2.0"
-               motion:framePosition="30"
-               motion:motionTarget="@id/photo" />
-           <KeyPosition
-               motion:framePosition="50"
-               motion:motionTarget="@id/name"
-               motion:keyPositionType="parentRelative"
-               motion:percentY="-0.8"/>
-           <KeyPosition
-               motion:framePosition="50"
-               motion:motionTarget="@id/position"
-               motion:keyPositionType="parentRelative"
-               motion:percentY="-0.8"/>
+        motion:duration="2000">
+        <KeyFrameSet>
 
-           <KeyPosition
-               motion:framePosition="50"
-               motion:motionTarget="@id/email"
-               motion:keyPositionType="parentRelative"
-               motion:percentY="0.9"/>
-           <KeyPosition
-               motion:framePosition="50"
-               motion:motionTarget="@id/phone"
-               motion:keyPositionType="parentRelative"
-               motion:percentY="0.9"/>
+            <KeyAttribute
+                android:alpha="0.0"
+                motion:framePosition="1"
+                motion:motionTarget="@id/background" />
+            <KeyAttribute
+                android:scaleX="1.0"
+                android:scaleY="2.0"
+                motion:framePosition="30"
+                motion:motionTarget="@id/photo" />
+            <KeyPosition
+                motion:framePosition="50"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@id/name"
+                motion:percentY="-0.8" />
+            <KeyPosition
+                motion:framePosition="50"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@id/position"
+                motion:percentY="-0.8" />
 
-       </KeyFrameSet>
+            <KeyPosition
+                motion:framePosition="50"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@id/email"
+                motion:percentY="0.9" />
+            <KeyPosition
+                motion:framePosition="50"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@id/phone"
+                motion:percentY="0.9" />
+
+        </KeyFrameSet>
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
+        <Constraint
+            android:id="@+id/phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="50dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintTop_toBottomOf="@+id/biography">
+            <CustomAttribute
+                motion:attributeName="backgroundColor"
+                motion:customColorValue="@android:color/holo_red_dark" />
+        </Constraint>
+        <Constraint
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toStartOf="@+id/phone"
+            motion:layout_constraintTop_toBottomOf="@+id/biography">
+            <CustomAttribute
+                motion:attributeName="backgroundColor"
+                motion:customColorValue="@android:color/holo_red_dark" />
+        </Constraint>
+        <Constraint
+            android:id="@+id/biography"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginTop="40dp"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toBottomOf="@+id/photo">
+            <CustomAttribute
+                motion:attributeName="backgroundColor"
+                motion:customColorValue="#FF5722" />
+            <CustomAttribute
+                motion:attributeName="textColor"
+                motion:customColorValue="@color/white" />
+            <CustomAttribute
+                motion:attributeName="textSize"
+                motion:customDimension="20sp" />
+        </Constraint>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
-<!--        <Constraint-->
-<!--            android:id="@+id/name"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            motion:layout_constraintBottom_toTopOf="@+id/position"-->
-<!--            android:layout_width="100dp"-->
-<!--            motion:layout_constraintTop_toBottomOf="@+id/background"-->
-<!--            motion:layout_constraintStart_toEndOf="@+id/photo"-->
-<!--            android:layout_marginLeft="40dp" />-->
+
+        <Constraint
+            android:id="@+id/phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="50dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintTop_toBottomOf="@+id/biography">
+            <CustomAttribute
+                motion:attributeName="backgroundColor"
+                motion:customColorValue="@android:color/holo_purple" />
+        </Constraint>
+        <Constraint
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toStartOf="@+id/phone"
+            motion:layout_constraintTop_toBottomOf="@+id/biography">
+            <CustomAttribute
+                motion:attributeName="backgroundColor"
+                motion:customColorValue="@android:color/holo_purple" />
+        </Constraint>
+        <Constraint
+            android:id="@+id/biography"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginTop="40dp"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toBottomOf="@+id/photo">
+            <CustomAttribute
+                motion:attributeName="backgroundColor"
+                motion:customColorValue="#CDDC39" />
+            <CustomAttribute
+                motion:attributeName="textColor"
+                motion:customColorValue="@color/black" />
+            <CustomAttribute
+                motion:attributeName="textSize"
+                motion:customDimension="10sp" />
+        </Constraint>
     </ConstraintSet>
 </MotionScene>
